RESOLVED FIXED21299
REGRESSION: <input> color specified in inline style applies to placeholder (affects MobileMe)
https://bugs.webkit.org/show_bug.cgi?id=21299
Summary REGRESSION: <input> color specified in inline style applies to placeholder (a...
mitz
Reported 2008-10-02 00:02:58 PDT
An <input>'s inline style declaration overrides the -webkit-input-placeholder-mode pseudo-class declaration, causing the placeholder text to have the color specified in inline style. For example, <input style="color: black;" placeholder="holding"> will show "holding" in black instead of dark gray.
Attachments
patch (20.97 KB, patch)
2008-10-02 17:02 PDT, Adele Peterson
mitz: review+
Adele Peterson
Comment 1 2008-10-02 11:21:22 PDT
I'll switch to using a pseudo element. bah.
Adele Peterson
Comment 2 2008-10-02 17:02:37 PDT
mitz
Comment 3 2008-10-02 17:17:08 PDT
Comment on attachment 24034 [details] patch r=me!
Adele Peterson
Comment 4 2008-10-02 17:30:27 PDT
Committed revision 37217
Note You need to log in before you can comment on or make changes to this bug.