WebCore/css/CSSSelector.cpp
@@ -88,7 +88,7 @@ void CSSSelector::extractPseudoType() const
     static AtomicString focus("focus");
     static AtomicString hover("hover");
     static AtomicString indeterminate("indeterminate");
-    static AtomicString inputPlaceholderMode("-webkit-input-placeholder-mode");
+    static AtomicString inputPlaceholder("-webkit-input-placeholder");
     static AtomicString lastChild("last-child");
     static AtomicString lastOfType("last-of-type");
     static AtomicString link("link");
@@ -153,9 +153,10 @@ void CSSSelector::extractPseudoType() const
         m_pseudoType = PseudoFirstChild;
     else if (m_value == fullPageMedia)
         m_pseudoType = PseudoFullPageMedia;
-    else if (m_value == inputPlaceholderMode)
-        m_pseudoType = PseudoInputPlaceholderMode;
-    else if (m_value == lastChild)
+    else if (m_value == inputPlaceholder) {
+        m_pseudoType = PseudoInputPlaceholder;
+        element = true;
+    } else if (m_value == lastChild)
         m_pseudoType = PseudoLastChild;
     else if (m_value == lastOfType)
         m_pseudoType = PseudoLastOfType;
