WebCore/rendering/RenderTextControl.h
@@ -103,6 +103,7 @@ public:
     void stopSearchEventTimer();
     
     bool placeholderIsVisible() const { return m_placeholderVisible; }
+    void updatePlaceholderVisibility();
 
     virtual void capsLockStateMayHaveChanged();
 
